ADDED back gettext support (enables translation preview in dlgedit)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,6 @@
-EXTRA_DIST = autogen.sh
+EXTRA_DIST = ./config.rpath  autogen.sh
 
-SUBDIRS = libltdl src 
+SUBDIRS = po libltdl src 
 
+
+ACLOCAL_AMFLAGS = -I m4
