FIXED 64bit and GCC 4.3 compilation issues (thanks Enon!)

--- a/src/dlgedit/Makefile.am
+++ b/src/dlgedit/Makefile.am
@@ -60,6 +60,7 @@ dlgedit_SOURCES = \
     dlg_point.h \
     dlg_rect.h \
     dlg_types.h \
+    gettext.h \
     gui_circle.h \
     gui_circle_events.h \
     gui_code.h \
