--- a/configure.in
+++ b/configure.in
@@ -10,7 +10,7 @@ dnl Detect the canonical host and target build environment
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 
-AM_INIT_AUTOMAKE(adonthell-tools, 0.4.0)
+AM_INIT_AUTOMAKE(adonthell-tools, 0.4.0-alpha-1)
 AM_CONFIG_HEADER(config.h)
 
 CXXFLAGS="-g -Wall -fno-exceptions -fno-rtti"
@@ -63,7 +63,18 @@ AC_SUBST(ADONTHELL_CFLAGS)
 AC_SUBST(ADONTHELL_LIBS)
 
 ADONTHELL_DATADIR=`pkg-config --variable=datadir adonthell`
+ADONTHELL_BACKEND=`pkg-config --variable=libdir adonthell`
 CXXFLAGS="$CXXFLAGS -DDATA_DIR=\\\"$ADONTHELL_DATADIR\\\""
+AC_SUBST(ADONTHELL_BACKEND)
+
+
+dnl *****************
+dnl Cairo
+dnl *****************
+
+PKG_CHECK_MODULES(CAIRO, [cairo >= 1.6.0])
+AC_SUBST(CAIRO_CFLAGS)
+AC_SUBST(CAIRO_LIBS)
 
 
 dnl *****************
@@ -88,29 +99,22 @@ AM_PATH_XML2($XML_VERSION,
 dnl ****************
 dnl Check for Python
 dnl ****************
-AM_PATH_PYTHON()
-if test x$pylibs = xnone; then
-   
-   dnl Find Python executable
-   AC_PATH_PROGS(PYPACKAGE, python)
+AM_PATH_PYTHON([2.0])
 
-   dnl Extract the version using Python, check against 1.5+
-
-   changequote(<<, >>)
-   PYTHON_VERSION=`$PYPACKAGE -c 'import sys ; print (int(sys.version[0]) * 10 + int(sys.version[2]))'`
-   PY_VERSION=`$PYPACKAGE -c 'import sys ; print sys.version[0:3]'`
-   changequote([, ])
-
-   if test $PYTHON_VERSION -lt 15; then
-	echo "Sorry, you need to have Python 1.5+ installed - update your version!"
-	AC_MSG_ERROR([*** Python 1.5 or better required])
-   fi
+dnl convert windows paths to cygwin paths
+case "$target" in
+	*-*-cygwin* | *-*-mingw32*)
+		pyexecdir=`cd $pyexecdir && pwd`
+		pythondir=`cd $pythondir && pwd`
+	;;
+esac
 
    dnl Find the Python.h header file
 
+if test "x$pycflags" = xnone; then
    AC_MSG_CHECKING(for Python header files)
    changequote(<<, >>)
-   PYINCLUDE=`$PYPACKAGE -c 'import sys ; print "%s/include/python%s" % (sys.prefix, sys.version[:3])'`
+   PYINCLUDE=`$PYTHON -c 'import sys ; print "%s/include/python%s" % (sys.prefix, sys.version[:3])'`
    changequote([, ])
 
    if test -r "$PYINCLUDE/Python.h"; then
@@ -120,15 +124,21 @@ if test x$pylibs = xnone; then
       AC_MSG_ERROR([Could not find Python.h in $PYINCLUDE])
    fi
    AC_MSG_RESULT(found)
-
+else
+   PY_CFLAGS=${pycflags}
+   AC_MSG_CHECKING(for Python cflags)
+   AC_MSG_RESULT($PY_CFLAGS)
+   AC_SUBST(PY_CFLAGS)
+fi
 
    dnl Find the Python library
 
+if test "x$pylibs" = xnone; then
    AC_MSG_CHECKING(for Python library)
    PYLIB=""
    changequote(<<, >>)
-   PYPREFIX=`$PYPACKAGE -c 'import sys; print sys.prefix'`
-   PYLIBVER=`$PYPACKAGE -c 'import sys; print sys.version[:3]'`
+   PYPREFIX=`$PYTHON -c 'import sys; print sys.prefix'`
+   PYLIBVER=`$PYTHON -c 'import sys; print sys.version[:3]'`
    changequote([, ])
 
    dnl look for a framework build of python first
@@ -141,11 +151,11 @@ if test x$pylibs = xnone; then
        AC_SUBST(PY_SPDIR)
        AC_MSG_RESULT(found)
    else
-       py_paths="$PYPREFIX/lib/python$PYLIBVER/config $PYPREFIX/lib"
-       py_suffix="$PYLIBVER.so $PYLIBVER.a .so .a"
-        
+       py_paths="$PYPREFIX/lib64/python$PYLIBVER/config $PYPREFIX/lib64 \
+	$PYPREFIX/lib/python$PYLIBVER/config $PYPREFIX/lib"
+
        dnl Try for specific version first, then the generic version, then panic
-        
+
        for ppath in $py_paths ; do
            if test -r "$ppath/libpython$PYLIBVER.so" -o \
                -r "$ppath/libpython$PYLIBVER.a"; then
@@ -158,7 +168,7 @@ if test x$pylibs = xnone; then
                break
            fi
        done
-        
+
        if test "x$PYLIB" != x ; then
            PY_LIBS="$PYLIB $PY_LIBS"
            AC_MSG_RESULT(found)
@@ -167,27 +177,13 @@ if test x$pylibs = xnone; then
        fi
    fi
 
-   dnl Get the libraries that python depends on
-
-   AC_PATH_PROG(haveldd, ldd)
+   dnl Get the libraries that a static python library depends on
    AC_MSG_CHECKING(for Python's dependencies)
 
-   if test x$haveldd != x ; then
-       changequote(<<, >>)
-       py_deps=`ldd $PYPACKAGE | sed 's/\( *lib\([^\/]*\)\.so.*=.*$\)/-l\2/p; d' | grep -v 'stdc++'`
-       for py_lib in $py_deps ; do
-         if test "$py_lib" != "-lm" && test "$py_lib" != "-lc" ; then
-            PY_DEPS="$PY_DEPS $py_lib"
-         fi
-      done
-      changequote([, ])
-   fi
+   py_extradeps=`$PYTHON -c 'import distutils.sysconfig; print distutils.sysconfig.get_config_var("LIBS")'`
+   py_sysextradeps=`$PYTHON -c 'import distutils.sysconfig; print distutils.sysconfig.get_config_var("SYSLIBS")'`
 
-   case $target in
-       *-sun-solaris*)
-         PY_DEPS="$PY_DEPS -lsocket -lnsl -ldl"
-           ;;
-   esac
+   PY_DEPS="$py_extradeps $py_sysextradeps"
 
    AC_MSG_RESULT($PY_DEPS)
 
@@ -200,24 +196,21 @@ if test x$pylibs = xnone; then
    AC_SUBST(PY_LIBS)
 
 else
-   PY_CFLAGS=${pycflags}
-   AC_MSG_CHECKING(for Python cflags)
-   AC_MSG_RESULT($PY_CFLAGS)
-   AC_SUBST(PY_CFLAGS)
    PY_LIBS=${pylibs}
-   AC_MSG_CHECKING(for Python library flags)
+   AC_MSG_CHECKING(for Python ld flags)
    AC_MSG_RESULT($PY_LIBS)
    AC_SUBST(PY_LIBS)
-   PY_VERSION="Manually specified"   
 fi
 
-AM_CONDITIONAL(PY_FRAMEWORK, test x$fw != x)
+AM_CONDITIONAL(PY_FRAMEWORK, test x$fw != x$PYPREFIX)
 
 
 AC_OUTPUT([ 
 po/Makefile.in
 Makefile
 src/Makefile
+src/backend/Makefile
 src/dlgedit/Makefile
 src/questedit/Makefile
+test/Makefile
 ])
