--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,4 +4,4 @@ noinst_PROGRAMS = backendtest
 
 backendtest_CXXFLAGS = $(CAIRO_CFLAGS) $(GTK_CFLAGS) $(ADONTHELL_CFLAGS) $(PY_CFLAGS) $(AM_CXXFLAGS) 
 backendtest_SOURCES = backendtest.cc
-backendtest_LDADD = $(CAIRO_LIBS) $(GTK_LIBS) $(ADONTHELL_LIBS) $(PY_LIBS)
+backendtest_LDADD = $(CAIRO_LIBS) $(GTK_LIBS) $(ADONTHELL_LIBS)
