--- a/src/backend/Makefile.am
+++ b/src/backend/Makefile.am
@@ -15,5 +15,5 @@ _gtk_la_SOURCES = \
 	gtk/surface_gtk.cc
 
 _gtk_la_CXXFLAGS = $(CAIRO_CFLAGS) $(GTK_CFLAGS) $(ADONTHELL_CFLAGS) $(AM_CXXFLAGS)
-_gtk_la_LDFLAGS = -module -avoid-version
+_gtk_la_LDFLAGS = -module -avoid-version -no-undefined
 _gtk_la_LIBADD = $(CAIRO_LIBS) $(GTK_LIBS) $(ADONTHELL_LIBS)
