IMPROVED performance of GTK+ gfx backend MOVED scrolling functionality to common package ADDED scrolling and basic object highlighting to map editor

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -4,10 +4,12 @@ noinst_LIBRARIES = libcommon.a
 
 noinst_HEADERS = \
     gui_file.h \
-    gui_modal_dialog.h
+    gui_modal_dialog.h \
+    gui_scrollable.h
 
 libcommon_a_SOURCES = \
     gui_file.cc \
-    gui_modal_dialog.cc
+    gui_modal_dialog.cc \
+    gui_scrollable.cc
 
 libcommon_a_CXXFLAGS = $(GTK_CFLAGS)
