--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+m4
+Adonthell-Tools.xcodeproj
 Makefile
 Makefile.in
 aclocal.m4
@@ -8,6 +10,7 @@ config.guess
 config.h
 config.h.in
 config.log
+config.rpath
 config.status
 config.sub
 configure
@@ -22,3 +25,5 @@ py-compile
 stamp-h1
 .project
 .DS_Store
+po/Makevars.template
+
