ADDED entity list concept code (without much functionality)

--- a/src/mapedit/Makefile.am
+++ b/src/mapedit/Makefile.am
@@ -3,6 +3,7 @@
 noinst_PROGRAMS = mapedit
 
 noinst_HEADERS = \
+    gui_entity_list.h \
     gui_grid.h \
     gui_mapedit.h \
     gui_mapedit_events.h \
@@ -13,6 +14,7 @@ noinst_HEADERS = \
     map_renderer.h
     
 mapedit_SOURCES = \
+    gui_entity_list.cc \
     gui_grid.cc \
     gui_mapedit.cc \
     gui_mapedit_events.cc \
