--- a/configure.in
+++ b/configure.in
@@ -14,7 +14,7 @@ AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE(adonthell-tools, 0.4.0-alpha-1)
 AM_CONFIG_HEADER(config.h)
 
-CXXFLAGS="-g -Wall -fno-exceptions -fno-rtti"
+CXXFLAGS="-g -Wall -fno-exceptions"
 
 dnl ********************
 dnl Checks for programs.
