ADDED Mac-Style menu on OSX ADDED reference counting for entities REFACTORED for more consistent usage of MapEntity class

--- a/src/mapedit/Makefile.am
+++ b/src/mapedit/Makefile.am
@@ -30,5 +30,5 @@ mapedit_SOURCES = \
     map_renderer.cc
 
 INCLUDES = -I@top_srcdir@/src/common -I@top_srcdir@/src
-mapedit_CXXFLAGS = -D_VERSION_=\"0.1\" $(GTK_CFLAGS) $(PY_CFLAGS) $(ADONTHELL_CFLAGS)
-mapedit_LDADD = ../common/libcommon.a $(GTK_LIBS) $(ADONTHELL_LIBS)
+mapedit_CXXFLAGS = -D_VERSION_=\"0.1\" $(GTK_CFLAGS) $(PY_CFLAGS) $(ADONTHELL_CFLAGS) ${IGE_MAC_CFLAGS}
+mapedit_LDADD = ../common/libcommon.a $(GTK_LIBS) $(ADONTHELL_LIBS) ${IGE_MAC_LIBS}
