--- a/configure.in
+++ b/configure.in
@@ -94,6 +94,19 @@ AC_SUBST(GTK_LIBS)
 
 
 dnl *****************
+dnl OSX Integration
+dnl *****************
+
+_gdk_tgt=`$PKG_CONFIG --variable=target gdk-2.0`
+AM_CONDITIONAL([GDK_TARGET_QUARTZ], [test x$_gdk_tgt = xquartz])
+if test "x$_gdk_tgt" = xquartz; then 
+   PKG_CHECK_MODULES(IGE_MAC, ige-mac-integration)
+   AC_SUBST(IGE_MAC_LIBS)
+   AC_SUBST(IGE_MAC_CFLAGS)
+fi
+
+
+dnl *****************
 dnl Check for libxml2
 dnl *****************
 XML_VERSION=2.5.0
