--- a/src/modeller/Makefile.am
+++ b/src/modeller/Makefile.am
@@ -1,5 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
+EXTRA_DIST = modeller.glade
+
 noinst_PROGRAMS = modeller
 
 noinst_HEADERS = \
@@ -15,6 +17,13 @@ modeller_SOURCES = \
     main.cc \
     mdl_cmdline.cc \
     mdl_renderer.cc
+
+# just for the dependency
+gui_modeller.cc : modeller.glade.h
+
+# generate a string out of the glade XML
+$(srcdir)/modeller.glade.h : modeller.glade
+	sed -e 's/"/\\"/g' -e 's/>$$/>"/' -e 's/^\( *\)</\1"</' $< > $@
 
 INCLUDES = -I@top_srcdir@/src/common -I@top_srcdir@/src
 modeller_CXXFLAGS = -D_VERSION_=\"0.1\" $(GTK_CFLAGS) $(PY_CFLAGS) $(ADONTHELL_CFLAGS) ${IGE_MAC_CFLAGS}
