--- a/src/modeller/Makefile.am
+++ b/src/modeller/Makefile.am
@@ -23,7 +23,7 @@ gui_modeller.cc : modeller.glade.h
 
 # generate a string out of the glade XML
 $(srcdir)/modeller.glade.h : modeller.glade
-	sed -e 's/"/\\"/g' -e 's/>$$/>"/' -e 's/^\( *\)</\1"</' $< > $@
+	$(SED) -e 's/"/\\"/g' -e 's/>$$/>"/' -e 's/^\( *\)</\1"</' $< > $@
 
 INCLUDES = -I@top_srcdir@/src/common -I@top_srcdir@/src
 modeller_CXXFLAGS = -D_VERSION_=\"0.1\" $(GTK_CFLAGS) $(PY_CFLAGS) $(ADONTHELL_CFLAGS) ${IGE_MAC_CFLAGS}
