UPDATED auto-scrolling to react a bit faster ADDED scrolling via arrow keys to mapedit

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,6 @@
 AM_CXXFLAGS = -I$(top_srcdir)/src
 
-noinst_PROGRAMS = backendtest
+# noinst_PROGRAMS = backendtest
 
 backendtest_CXXFLAGS = $(CAIRO_CFLAGS) $(GTK_CFLAGS) $(ADONTHELL_CFLAGS) $(PY_CFLAGS) $(AM_CXXFLAGS) 
 backendtest_SOURCES = backendtest.cc
