ADDED character schedule editing FIXED setting position when placing character FIXED placing object multiple times at same location FIXED saving object with absolute instead of relative path

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -5,11 +5,13 @@ noinst_LIBRARIES = libcommon.a
 noinst_HEADERS = \
     gui_file.h \
     gui_modal_dialog.h \
-    gui_scrollable.h
+    gui_scrollable.h \
+    util.h
 
 libcommon_a_SOURCES = \
     gui_file.cc \
     gui_modal_dialog.cc \
-    gui_scrollable.cc
+    gui_scrollable.cc \
+    util.cc
 
-libcommon_a_CXXFLAGS = $(GTK_CFLAGS)
+libcommon_a_CXXFLAGS = $(ADONTHELL_CFLAGS) $(GTK_CFLAGS)
