ADDED dialog to control grid ADDED refresh button to reload entities from file system

--- a/src/mapedit/Makefile.am
+++ b/src/mapedit/Makefile.am
@@ -1,14 +1,19 @@
 ## Process this file with automake to produce Makefile.in
 
-EXTRA_DIST = entity-properties.glade zone-properties.glade
+EXTRA_DIST = \
+    entity-properties.glade \
+    grid-properties.glade \
+    zone-properties.glade
 
 noinst_PROGRAMS = mapedit
 
 noinst_HEADERS = \
     entity-properties.glade.h \
+    grid-properties.glade.h \
     gui_entity_dialog.h \
     gui_entity_list.h \
     gui_grid.h \
+    gui_grid_dialog.h \
     gui_mapedit.h \
     gui_mapedit_events.h \
     gui_mapview.h \
@@ -27,6 +32,7 @@ mapedit_SOURCES = \
     gui_entity_dialog.cc \
     gui_entity_list.cc \
     gui_grid.cc \
+    gui_grid_dialog.cc \
     gui_mapedit.cc \
     gui_mapedit_events.cc \
     gui_mapview.cc \
@@ -42,6 +48,7 @@ mapedit_SOURCES = \
 
 # just for the dependency
 gui_entity_dialog.cc : entity-properties.glade.h
+gui_grid_dialog.cc : grid-properties.glade.h
 gui_zone_dialog.cc : zone-properties.glade.h
 
 # generate a string out of the glade XML
