FIXES for future GTK+ 3.x migration FIXED segfault in mapedit grid control FIXED modeller rendering issue when decreasing zoom level after scrolling

--- a/src/mapedit/Makefile.am
+++ b/src/mapedit/Makefile.am
@@ -59,6 +59,9 @@ gui_zone_dialog.cc : zone-properties.glade.h
 %.glade.h : %.glade
 	$(SED) -e 's/"/\\"/g' -e 's/>$$/>"/' -e 's/^\( *\)</\1"</' $< > $(srcdir)/$@
 
+# preparation for switching to GTK+ 3.0
+GTK_3_0_FLAGS = -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGSEAL_ENABLE
+
 INCLUDES = -I@top_srcdir@/src/common -I@top_srcdir@/src
-mapedit_CXXFLAGS = -D_VERSION_=\"0.1\" $(GTK_CFLAGS) $(PY_CFLAGS) $(ADONTHELL_CFLAGS) ${IGE_MAC_CFLAGS}
+mapedit_CXXFLAGS = -D_VERSION_=\"0.1\" $(GTK_CFLAGS) $(GTK_3_0_FLAGS) $(PY_CFLAGS) $(ADONTHELL_CFLAGS) ${IGE_MAC_CFLAGS}
 mapedit_LDADD = ../common/libcommon.a $(GTK_LIBS) $(ADONTHELL_LIBS) $(PY_LIBS) ${IGE_MAC_LIBS}
