--- a/src/modeller/Makefile.am
+++ b/src/modeller/Makefile.am
@@ -25,6 +25,9 @@ gui_modeller.cc : modeller.glade.h
 $(srcdir)/modeller.glade.h : modeller.glade
 	$(SED) -e 's/"/\\"/g' -e 's/>$$/>"/' -e 's/^\( *\)</\1"</' $< > $@
 
+# preparation for switching to GTK+ 3.0
+GTK_3_0_FLAGS = -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGSEAL_ENABLE
+
 INCLUDES = -I@top_srcdir@/src/common -I@top_srcdir@/src
-modeller_CXXFLAGS = -D_VERSION_=\"0.1\" $(GTK_CFLAGS) $(PY_CFLAGS) $(ADONTHELL_CFLAGS) ${IGE_MAC_CFLAGS}
+modeller_CXXFLAGS = -D_VERSION_=\"0.1\" $(GTK_CFLAGS) ${GTK_3_0_FLAGS} $(PY_CFLAGS) $(ADONTHELL_CFLAGS) ${IGE_MAC_CFLAGS}
 modeller_LDADD = ../common/libcommon.a $(GTK_LIBS) $(ADONTHELL_LIBS) ${IGE_MAC_LIBS}
