--- a/configure.in
+++ b/configure.in
@@ -116,6 +116,20 @@ AM_PATH_XML2($XML_VERSION,
 )
 
 
+dnl *****************
+dnl GNU/Linux desktop integration
+dnl *****************
+
+AC_PATH_PROG(UPDATE_DESKTOP_DATABASE, update-desktop-database, no)
+AC_PATH_PROG(UPDATE_MIME_DATABASE, update-mime-database, no)
+
+AC_ARG_ENABLE(desktop-update, [AC_HELP_STRING(--disable-desktop-update, Disable the MIME desktop database update)], disable_desktop=yes, disable_desktop=no)
+AC_ARG_ENABLE(mime-update, [AC_HELP_STRING(--disable-mime-update, Disable the MIME database update)], disable_mime=yes, disable_mime=no)
+
+AM_CONDITIONAL(UPDATE_DESKTOP, test "x$UPDATE_DESKTOP_DATABASE" != "xno" -a "x$disable_desktop" = "xno")
+AM_CONDITIONAL(UPDATE_MIME, test "x$UPDATE_MIME_DATABASE" != "xno" -a "x$disable_mime" = "xno")
+
+
 dnl ****************
 dnl Check for Python
 dnl ****************
@@ -228,6 +242,7 @@ AM_CONDITIONAL(PY_FRAMEWORK, test x$fw != x$PYPREFIX)
 
 AC_OUTPUT([ 
 Makefile
+desktop/Makefile
 src/Makefile
 src/backend/Makefile
 src/common/Makefile
