ADDED sorting of entity-list by path and file name ADDED some code for a entity filter dialog. Very much work in progress.

--- a/src/mapedit/Makefile.am
+++ b/src/mapedit/Makefile.am
@@ -1,6 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 EXTRA_DIST = \
+    entity-filter.glade \
     entity-properties.glade \
     grid-properties.glade \
     zone-properties.glade
@@ -8,10 +9,12 @@ EXTRA_DIST = \
 noinst_PROGRAMS = mapedit
 
 noinst_HEADERS = \
+    entity-filter.glade.h \
     entity-properties.glade.h \
     grid-properties.glade.h \
     gui_entity_dialog.h \
     gui_entity_list.h \
+    gui_filter_dialog.h \
     gui_grid.h \
     gui_grid_dialog.h \
     gui_mapedit.h \
@@ -33,6 +36,7 @@ noinst_HEADERS = \
 mapedit_SOURCES = \
     gui_entity_dialog.cc \
     gui_entity_list.cc \
+    gui_filter_dialog.cc \
     gui_grid.cc \
     gui_grid_dialog.cc \
     gui_mapedit.cc \
@@ -51,6 +55,7 @@ mapedit_SOURCES = \
     map_renderer.cc
 
 # just for the dependency
+gui_filter_dialog.cc : entity-filter.glade.h
 gui_entity_dialog.cc : entity-properties.glade.h
 gui_grid_dialog.cc : grid-properties.glade.h
 gui_zone_dialog.cc : zone-properties.glade.h
