--- a/desktop/dlgedit.desktop
+++ b/desktop/dlgedit.desktop
@@ -2,6 +2,7 @@
 Name=Adonthell Dlgedit
 Comment=The Adonthell Dialogue Editor.
 Exec=adonthell-dlgedit
+Icon=adonthell-dlgedit
 Terminal=false
 Type=Application
 Categories=Development;RolePlaying;
