--- a/desktop/mapedit.desktop
+++ b/desktop/mapedit.desktop
@@ -2,6 +2,7 @@
 Name=Adonthell Mapedit
 Comment=The Adonthell World Editor.
 Exec=adonthell-mapedit
+Icon=adonthell-mapedit
 Terminal=false
 Type=Application
 Categories=Development;RolePlaying;
